# clamav-large-archive-scanner

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.scanner  Dockerfile.scanner.in.clam  LICENSE  README.md  docker-compose.yml  pyproject.toml  run_scan.sh
src/: README.md
src/clam_prototype/: main.py  requirements.txt  run_pytest_cmd
src/clam_prototype/lib/: __init__.py  cleanup.py  contexts.py  detect.py  exceptions.py  fast_log.py  file_data.py  filesize.py  mount_tools.py  scanner.py  tmp_files.py  unpack.py  unpackers.py
src/clam_prototype/test/: common.py  test_cleanup.py  test_contexts.py  test_file_data.py  test_filesize.py  test_main.py  test_mount_tools.py  test_scanner.py  test_tmp_files.py  test_unpack.py
src/clamav-large-archive-scanner/: main.py  requirements.txt  run_pytest_cmd
src/clamav-large-archive-scanner/lib/: __init__.py  contexts.py  file_data.py  filesize.py  scanner.py
src/clamav-large-archive-scanner/test/: test_cleanup.py  test_filesize.py  test_mount_tools.py
src/clamav_large_archive_scanner/: main.py
src/clamav_large_archive_scanner/lib/: __init__.py  cleanup.py  contexts.py  exceptions.py  fast_log.py  file_data.py  filesize.py  mount_tools.py  scanner.py  tmp_files.py  unpack.py
src/clamav_large_archive_scanner/test/: common.py  requirements.txt  test_cleanup.py  test_contexts.py  test_file_data.py  test_filesize.py  test_main.py  test_mount_tools.py  test_scanner.py  test_tmp_files.py  test_unpack.py
